syntax = "proto3";

package net.devh.boot.grpc.example;

option java_multiple_files = true;
option java_package = "com.grpc.deneme";

service OrderService {
  rpc ExecuteOrder(OrderRequest) returns (OrderResponse) {};
}

message OrderRequest {
  string email = 1;
  string product = 2;
  int32 amount = 3;
}

message OrderResponse {
  string info = 1;
}